Add configurable String hash implementations