@@ -6,9 +6,12 @@ package se.thanh.pds.bloomfilter
  * Licensed under the MIT License.
  */
 
-import se.thanh.pds.bloomfilter.internal.hashing.MurmurHash3
-
-import java.lang.invoke.{ MethodHandles, VarHandle }
+import se.thanh.pds.bloomfilter.internal.hashing.{
+  MurmurHash3,
+  PrivateStringHash,
+  SafeStringHash,
+  UnsafeStringHash
+}
 
 trait Hash[A]:
   def hash(from: A): Long
@@ -25,22 +28,45 @@ object Hash extends Hash.DefaultInstances:
       override def hash(from: Array[Byte]): Long =
         MurmurHash3.murmurhash3_x64_64(from, 0, from.length, 0)
 
-    given stringHash: Hash[String] with
-      override def hash(from: String): Long =
-        val value = stringValue.get(from).asInstanceOf[Array[Byte]]
-        MurmurHash3.murmurhash3_x64_64(value, 0, value.length, 0)
+    given stringHash: Hash[String] = strings.default
 
-  private val stringValue: VarHandle =
-    try
-      MethodHandles
-        .privateLookupIn(classOf[String], MethodHandles.lookup())
-        .findVarHandle(classOf[String], "value", classOf[Array[Byte]])
-    catch
-      case th: Throwable =>
-        throw new ExceptionInInitializerError(
-          new IllegalStateException(
-            "Cannot access String.value, which bloomfilter needs to hash strings " +
-              "without copying them. Run the JVM with --add-opens java.base/java.lang=ALL-UNNAMED.",
-            th
-          )
-        )
+  object strings:
+
+    /**
+     * Selects the first available allocation-free String hash in this order:
+     * [[unsafe]], [[privateJDK]], then [[safe]].
+     */
+    val default: Hash[String] =
+      UnsafeStringHash.instance
+        .orElse(PrivateStringHash.instance)
+        .getOrElse(SafeStringHash.instance)
+
+    /**
+     * Safe String hashing over logical UTF-16 code units.
+     *
+     * This implementation uses only public Java APIs and produces stable hashes
+     * independently of the JVM's compact String representation.
+     */
+    lazy val safe: Hash[String] = SafeStringHash.instance
+
+    /**
+     * String hashing over sun.misc.Unsafe.
+     *
+     * On JDK 24 and later, `--sun-misc-unsafe-memory-access=allow` suppresses
+     * warnings for this access, while `deny` makes this instance unavailable.
+     * Its hashes depend on the JVM's String representation, so a filter must
+     * use the same instance and JVM configuration for all reads and writes.
+     */
+    lazy val unsafe: Hash[String] =
+      UnsafeStringHash.instance.fold(cause => throw cause, identity)
+
+    /**
+     * String hashing over the JDK's private backing byte array.
+     *
+     * Selecting this instance requires
+     * `--add-opens=java.base/java.lang=ALL-UNNAMED`. Its hashes depend on the
+     * JVM's String representation, so a filter must use the same instance and
+     * JVM configuration for all reads and writes.
+     */
+    lazy val privateJDK: Hash[String] =
+      PrivateStringHash.instance.fold(cause => throw cause, identity)
